feat: 설정 파일 리팩토링 및 Kafka outbox 로직 개선
- 일관성을 높이기 위해 애플리케이션 설정을 YAML에서 properties 형식으로 변경
- Kafka outbox dispatcher를 모듈화하고 구성 가능한 배치 크기와 재시도 로직 추가
- Kafka 프로듀서 설정 추가
- 의존성 정리
- 가독성을 위해 Docker Compose 환경 변수 업데이트